--- a/Source/CommandLineTools/greymap/CMakeLists.txt
+++ b/Source/CommandLineTools/greymap/CMakeLists.txt
@@ -3,6 +3,10 @@ add_executable(
 	greymap.m
 	)
 
+add_sanitizers(
+	greymap
+	)
+
 target_link_libraries(
 	greymap
 	${art_generic_link_libraries}
