--- a/Source/CommandLineTools/art_imagetool/CMakeLists.txt
+++ b/Source/CommandLineTools/art_imagetool/CMakeLists.txt
@@ -3,6 +3,10 @@ add_executable(
 	art_imagetool.m
 	)
 
+add_sanitizers(
+	art_imagetool
+	)
+
 target_link_libraries(
 	art_imagetool
 	${art_generic_link_libraries}
