materials still don't work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,9 @@ set ( ART_VERSION_DEVTAG -dev)
 
 # [Sebastian]: I added this line to enable debugging functionality in my IDE
 # TODO: remove line when not needed anymore
-set( CMAKE_BUILD_TYPE Debug )
+set( CMAKE_BUILD_TYPE Debug)
+set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -O0")
+set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} -O0")
 
 if ( APPLE )
 set(CMAKE_MACOSX_RPATH 1)
