--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,22 +1,32 @@
 stages:
     - build
-    - test
+#    - test
     
-before_script:
-    - apt-get update
-    - apt-get -y install
-        cmake
-        gobjc
-        gobjc++
-        libtiff-dev
-        liblcms2-dev
-        libgnustep-base-dev
-        libgsl-dev
-        libopenexr-dev
+#before_script:
+#    - apt-get update
+#    - apt-get -y install
+#        cmake
+#        gobjc
+#        gobjc++
+#        libtiff-dev
+#        liblcms2-dev
+#        libgnustep-base-dev
+#        libgsl-dev
+#        libopenexr-dev
 
 linux:
     stage: build
     script:
+        - apt-get update
+		- apt-get -y install
+		    cmake
+		    gobjc
+		    gobjc++
+		    libtiff-dev
+		    liblcms2-dev
+		    libgnustep-base-dev
+		    libgsl-dev
+		    libopenexr-dev
         - mkdir build
         - cd build
         - cmake ..
@@ -26,7 +36,7 @@ linux:
         - linux
 
 render:
-    stage: test
+    stage: build
     script:
         - mkdir build
         - cd build
