--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -40,6 +40,10 @@ render:
     stage: test
 #    needs: ["linux"]
     script:
+        - export PATH=${PATH}:/usr/local/bin
+        - export LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/usr/local/lib
+        - export ART_LIBRARY_PATH=/usr/local/lib
+        - export ART_RESOURCE_PATH=${ART_LIBRARY_PATH}/ART_Resources
         - mkdir build
         - cd build
         - cmake ..
@@ -50,11 +54,6 @@ render:
         - git checkout v2.1
         - python art_functionality_test.py
         - mv output ..
-    environment:
-      PATH=${PATH}:/usr/local/bin
-      LD_LIBRARY_PATH=${LD_LIBRARY_PATH}:/usr/local/lib
-      ART_LIBRARY_PATH=/usr/local/lib
-      ART_RESOURCE_PATH=${ART_LIBRARY_PATH}/ART_Resources
     artifacts:
         when: always
         paths:
