--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -58,6 +58,8 @@ render:
         - cd ..
         - cd reference
         - rm *.artcsp *.artraw *.tiff
+	- cd ..
+        - if [ $(cat output/report/success) = 'FALSE' ]; then exit 1; fi
     artifacts:
         when: always
         paths:
