--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -12,7 +12,7 @@ before_script:
         libgnustep-base-dev
         libgsl-dev
         libopenexr-dev
-        ninja
+        ninja-build
 
 # linux:
 #     stage: build
