Adding warnings for executables

--- a/Source/CommandLineTools/art_imagesnr/CMakeLists.txt
+++ b/Source/CommandLineTools/art_imagesnr/CMakeLists.txt
@@ -1,12 +1,14 @@
 add_executable(
-art_imagesnr
-art_imagesnr.m
-)
+	art_imagesnr
+	art_imagesnr.m
+	)
 
 target_link_libraries(
-art_imagesnr
+	art_imagesnr
 	${art_generic_link_libraries}
-)
+	)
+
+target_compile_options(art_imagesnr PRIVATE -Wall -Wextra)
 
 install (
 	TARGETS
