--- a/Source/CommandLineTools/art_imagetool/CMakeLists.txt
+++ b/Source/CommandLineTools/art_imagetool/CMakeLists.txt
@@ -8,6 +8,8 @@ target_link_libraries(
 	${art_generic_link_libraries}
 	)
 
+target_compile_options(art_imagetool PRIVATE -Wall -Wextra)
+
 install (
 	TARGETS
 		art_imagetool
