--- a/Source/CommandLineTools/arm2art/CMakeLists.txt
+++ b/Source/CommandLineTools/arm2art/CMakeLists.txt
@@ -1,12 +1,14 @@
 add_executable(
-arm2art
-arm2art.m
-)
+	arm2art
+	arm2art.m
+	)
 
 target_link_libraries(
-arm2art
+	arm2art
 	${art_generic_link_libraries}
-)
+	)
+
+target_compile_options(arm2art PRIVATE -Wall -Wextra)
 
 install (
 	TARGETS
