--- a/Source/CommandLineTools/art_imagediff/CMakeLists.txt
+++ b/Source/CommandLineTools/art_imagediff/CMakeLists.txt
@@ -1,12 +1,14 @@
 add_executable(
-art_imagediff
-art_imagediff.m
-)
+  art_imagediff
+  art_imagediff.m
+  )
 
 target_link_libraries(
   art_imagediff
   ${art_generic_link_libraries}
-)
+  )
+
+target_compile_options(art_imagediff PRIVATE -Wall -Wextra)
 
 install (
   TARGETS
