--- a/Source/CommandLineTools/polvis/CMakeLists.txt
+++ b/Source/CommandLineTools/polvis/CMakeLists.txt
@@ -8,6 +8,8 @@ target_link_libraries(
 	${art_generic_link_libraries}
 	)
 
+target_compile_options(polvis PRIVATE -Wall -Wextra)
+
 install (
 	TARGETS
 		polvis
