Compact Fluorescence - CmakeLists (and installation)

--- a/Source/CommandLineTools/CMakeLists.txt
+++ b/Source/CommandLineTools/CMakeLists.txt
@@ -4,6 +4,7 @@ add_subdirectory (art_imagesnr)
 add_subdirectory (art_imagediff)
 add_subdirectory (artist)
 add_subdirectory (bugblatter)
+add_subdirectory (compact_fluo)
 add_subdirectory (greymap) 
 add_subdirectory (impresario)
 add_subdirectory (polvis)
