--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ project (ART)
 set ( ART_VERSION_MAJOR 2 )
 set ( ART_VERSION_MINOR 1 )
 set ( ART_VERSION_PATCH 1 )
-set ( ART_VERSION_DEVTAG )
+set ( ART_VERSION_DEVTAG -new_sampler )
 
 set(CMAKE_CXX_STANDARD 11)
 
